# mini_pupper_bsp

./: .gitignore  CHANGES.md  CONTRIBUTING.md  JAZZY_MIGRATION.md  LICENSE  README.md  cleanup_overkill.py  get-version.sh  install.sh  prepare_dkms.sh  setup_jazzy.sh  test.sh  update_kernel_modules.sh  verify_noble.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
Display/: test.py
EEPROM/: dkms.conf  install.sh  mini-pupper-eeprom-overlay.dts
EEPROM/ubuntu_20.04/: at24.c
EEPROM/ubuntu_24.04/: at24.c
FuelGauge/: .Module.symvers.cmd  .max1720x_battery.ko.cmd  .max1720x_battery.mod.cmd  .max1720x_battery.mod.o.cmd  .max1720x_battery.o.cmd  .modules.order.cmd  battery_monitor  battery_monitor.service  display_low_battery.py  dkms.conf  install.sh  max1720x_battery.ko  max1720x_battery.mod  max1720x_battery.mod.c  modules.order
FuelGauge/ubuntu_24.04/: max1720x_battery.c
IO_Configuration/: install.sh
LCD/: install.sh
PWMController/: Makefile  dkms.conf  i2c-pwm-pca9685a.dts  install.sh  pwm_pca9685.c
Python_Module/: requirements.txt  setup.cfg
Python_Module/MangDang/Adafruit_GPIO/: GPIO.py  Platform.py
Python_Module/MangDang/LCD/: ST7789.py
Python_Module/MangDang/mini_pupper/: HardwareInterface.py  ServoCalibration.py  calibrate_servos.py  calibrate_tool.py  capabilities.py  display.py  nvram.py  set_servos_before_assembly.py
Python_Module/MangDang/minipupper/: Config.py  HardwareInterface.py  ServoCalibration.py  calibrate_servos.py  calibrate_tool.py  display.py  nvram.py  set_servos_before_assembly.py
RPiCamera/: README.md  install.sh
RPiCamera/dts/: README.md
System/: install.sh  rc-local.service  rc.local
demos/: python_api_capabilities.py  python_api_display.py
imgs/: copyright_readme.md
mock_api/: ChangeLog  requirements.txt  setup.cfg
(+13 files in other folders)
