[metadata]
name             = MangDang
version          = 0.1.0
summary          = MangDang code for minipupper
description-file = README.rst
author           = MangDang
author-email     = fae@mangdang.net
home-page        = https://www.mangdang.net

[files]
packages         = MangDang

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]
console_scripts =
    calibrate = MangDang.minipupper.calibrate_tool:main
    cli-calibrate = MangDang.minipupper.calibrate_servos:main
    set-servos-before-assembly = MangDang.minipupper.set_servos_before_assembly:main

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
